--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.14",
+    "expo-camera": "~14.1.2",
+    "expo-file-system": "~16.0.8",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
+    "expo-media-library": "~15.9.1",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -26,8 +31,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-camera": "^4.2.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-view-shot": "3.8.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
